--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.115.6"
 uvicorn = {extras = ["standard"], version = "^0.33.0"}
+pydantic = {extras = ["email"], version = "^2.10.3"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
