--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 fastapi = "^0.115.6"
 uvicorn = {extras = ["standard"], version = "^0.33.0"}
 pydantic = {extras = ["email"], version = "^2.10.3"}
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
