--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.115.6"
 uvicorn = {extras = ["standard"], version = "^0.33.0"}
 pydantic = {extras = ["email"], version = "^2.10.3"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
+aiosqlite = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
