--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = {extras = ["standard"], version = "^0.33.0"}
 pydantic = {extras = ["email"], version = "^2.10.3"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 aiosqlite = "^0.20.0"
+pydantic-settings = "^2.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
